Adds card display to UI

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <title>poker</title>
     <link rel="stylesheet" href="./main.css" media="screen" title="no title">
+    <script src="https://use.fontawesome.com/82795c4623.js"></script>
   </head>
   <body>
     <div>
+      <h3>Poker game</h3>
       <p>
         Enter the number of players:<br>
         <input type="number" name="players" class="players" placeholder="Number of players"/>
       </p>
       <p>
-        Enter the number of cards each player should have:<br>
+        Enter the number of cards:<br>
         <input type="number" name="cards" class="cards" placeholder="Number of cards"/>
       </p>
       <p>
@@ -24,6 +26,10 @@
       <p class="winner"></p>
     </div>
 
+    <div class="showCards">
+
+    </div>
+    <script type="text/javascript" src="./index.js"></script>
     <script type="text/javascript" src="./app.js"></script>
   </body>
 </html>
