--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -12,9 +12,9 @@
   <script src="../lib/jasmine-2.5.1/boot.js"></script>
 
   <!-- source files -->
-  <script src="app.js"></script>
+  <script src="../public/app.js"></script>
   <!-- spec file -->
-  <script src="app.test.js"></script>
+  <script src="./app.test.js"></script>
 
 </head>
 
