move index.html to root

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>poker</title>
-    <link rel="stylesheet" href="./main.css" media="screen" title="no title">
+    <link rel="stylesheet" href="./public/main.css" media="screen" title="no title">
     <script src="https://use.fontawesome.com/82795c4623.js"></script>
   </head>
   <body>
@@ -29,7 +29,7 @@
     <div class="showCards">
 
     </div>
-    <script type="text/javascript" src="./index.js"></script>
-    <script type="text/javascript" src="./app.js"></script>
+    <script type="text/javascript" src="./public/index.js"></script>
+    <script type="text/javascript" src="./public/app.js"></script>
   </body>
 </html>
