Updates css so browser UI is slightly less ugly

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <script src="https://use.fontawesome.com/82795c4623.js"></script>
   </head>
   <body>
-    <div>
+    <div class="interface">
       <h3>Poker game</h3>
       <p>
         Enter the number of players:<br>
-        <input type="number" name="players" class="players" placeholder="Number of players"/>
+        <input type="number" name="players" class="players"/>
       </p>
       <p>
         Enter the number of cards:<br>
-        <input type="number" name="cards" class="cards" placeholder="Number of cards"/>
+        <input type="number" name="cards" class="cards"/>
       </p>
       <p>
         <input class="submitButton" type="submit" value="Play!"/>
